2002-05-22  Martin Baulig  <martin@gnome.org>

	* debug.c: Added "dont_assemble" and "dont_precompile" argument for dwarf-plus.

	* mono.c: Applied patch from Miguel:
	(--debug): This is now a `--debug=[FORMAT]' argument where FORMAT defaults
	to dwarf-plus.

2002-05-21  Martin Baulig  <martin@gnome.org>

	* debug.c (mono_debug_source_location_from_address): Added support for the
	dwarf2-plus format.

2002-05-21  Martin Baulig  <martin@gnome.org>

	* debug.c (mono_debug_source_location_from_address): New function.
	(mono_debug_il_offset_from_address): New function.

	* exception.c (arch_handle_exception): If we have debugging support, include
	information about the source location and IL offset in the stack trace.

2002-05-21  Dietmar Maurer  <dietmar@ximian.com>

	* jit.c (mono_analyze_stack): LDARG uses 16bit argument (fix bug
	#25058)  

	* x86.brg (stmt): removed unnecessary assertion

	* jit.c (check_inlining):  we cant inline throw instructions
	(because it breaks some basic block requirements)

2002-05-21  Martin Baulig  <martin@gnome.org>

	* debug-private.h (MonoDebugFlags): New enum typedef.

	* debug.c (mono_debug_open): Added a few useful arguments.  See the manpage
	for details.

2002-05-21  Martin Baulig  <martin@gnome.org>

	* debug.c (mono_debug_open_file): Renamed to mono_debug_open(), now takes
	a `MonoAssembly *' argument instead of a `char *filename' one.  Also added
	`const char **args' argument.

	* mono.c (mono_jit_assembly): Renamed to mono_jit_compile_image(), added
	`int verbose' argument and made it public.
	(mono_jit_compile_class): New public function,  moved the code to compile
	all methods in a class here from main().
	(--compile): The argument can now also be an image (in `@imagename' format).
	Updated documentation for this command line argument.
	(--precompile): New command line argument to precompile an image/class/method
	before executing the main app.  This argument can be given multiple times.